# lstm_kernel

./: CMakeLists.txt
benchmark/: tf_test.py
include/: lstm.h
src/: lstm.cpp
tensorflow_binding/: setup.py
tensorflow_binding/intel_lstm/: __init__.py
tensorflow_binding/src/: lstmop.cpp
tests/: test_lstm.cpp
